kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuxify-front
  labels:
    app: tuxify-front
    environment: production

spec:
  selector:
    matchLabels:
      app: tuxify-front
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: tuxify-front
        environment: production
    spec:
      containers:
        - name: tuxify-front
          image: ghcr.io/tux-inc/tuxify:latest
          ports:
            - containerPort: 80
              name: tuxify
              protocol: TCP
          resources: {}
      imagePullSecrets:
        - name: github-container-registry
